# MobilityPySpark

./: .gitignore  BerlinMODQueries.ipynb  Dockerfile  LICENSE  README.md  pyproject.toml  rdd.py  readme.ipynb  requirements.txt  setup.py
container/: Dockerfile  requirements.txt
datasets/: entropy.csv  geese.csv  instants.csv  licences.csv  mini_states_2022-06-27-00.csv  minimini_sample_pymeos.csv  municipalities.csv  nests.csv  partition_data.csv  periods.csv  points.csv  preproc.csv  regions.csv  tripsinputnano.csv  vehicles.csv
datasets/out.csv/: .part-00000-84c0dc5b-105d-4c30-a8fa-ae0676521588-c000.csv.crc  part-00000-84c0dc5b-105d-4c30-a8fa-ae0676521588-c000.csv
datasets/out.parquet/: .part-00000-9465aafc-6e0e-48ea-a2ef-7098d835b4ae-c000.snappy.parquet.crc  part-00000-9465aafc-6e0e-48ea-a2ef-7098d835b4ae-c000.snappy.parquet
notebooks/: DuckExample.ipynb  PartitioningSchemesWithPyMEOS.ipynb  Plots.ipynb  PlottingDemo.ipynb  PymeosAndPysparkDemo.ipynb  udtdemo.ipynb
pysparkmeos/: BerlinMODPreprocessing.ipynb  BerlinMODQueries.ipynb  Bugs.ipynb  Dirty.ipynb  Partitioning.ipynb  PartitioningSchemesWithPyMEOS.ipynb  PymeosAndPysparkDemo.ipynb  RegularGridSpark.ipynb  Untitled.ipynb
pysparkmeos/BerlinMOD/: __init__.py  config.py  func.py  partition_queries..py  partition_queries.py  queries.py  transformation_queries.py
pysparkmeos/UDF/: udf.py
pysparkmeos/UDT/: MeosDatatype.py  __init__.py  factory.py  wrappers.py
pysparkmeos/UDTF/: __init__.py  base_partition_udtf.py  grid_udtf.py
pysparkmeos/partitions/: adaptive_partitioner.py  grid_partitioner.py  (+10 more)
(+33 files in other folders)
