[tool.poetry]
name = "pysparkmeos"
version = "0.1.0"
description = "Repository to handle pymeos data types in pyspark and experiment with distribution strategies for mobility data."
authors = ["Luis Alfredo León Villapún"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "^3.5.1"
pymeos = "^1.1.3"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
